--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Index.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Index.cshtml
@@ -9,6 +9,12 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-controller="Products" asp-action="Index">
+    <p>
+        Zoek: <input type="text" name="SearchString">
+        <input type="submit" value="Filter" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
