--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: rgb(55, 75, 53); color: white;">
             <div class="container">
+                <img src="~/lib/bootstrap/jocohomelogo.png" height="50" width="50" style="border-radius:100px;" />
+                <br />
                 <a class="navbar-brand" asp-area="" asp-controller="Products" asp-action="Index">JoCoHome_Dollo</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -40,6 +42,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Contacts" asp-action="Create">Contact</a>
                         </li>
                     </ul>
                 </div>
