--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
             <div class="container">
                 <img src="~/lib/bootstrap/jocohomelogo.png" height="50" width="50" style="border-radius:100px;" />
                 <br />
-                <a class="navbar-brand" asp-area="" asp-controller="Products" asp-action="Index">JoCoHome_Dollo</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">JoCoHome_Dollo</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -37,6 +37,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Products" asp-action="Index">Producten</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
