Added an image, Did a few translations

--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Index.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
         ViewData["Title"] = "Index";
 }
 
-<h2>Products</h2>
+<h2>Producten</h2>
 
-<p>Hello from our View Template!</p>
+<p>Welkom op de product pagina!</p>
+
+<img src="https://cdn.roompot.com/assets/imgs/vakantieparken/nederland/zeeland/roompot-beach-resort/beach-house/beach-house-6-pers/556942/accommodatie-header/640x290/70391.jpg" alt="Alternate Text" />
