--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
             <div class="container">
                 <img src="~/lib/bootstrap/jocohomelogo.png" height="50" width="50" style="border-radius:100px;" />
                 <br />
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">JoCoHome_Dollo</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">JoCoHome</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -42,6 +42,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        @* Nieuws pagina komt hier *@
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Nieuws</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -64,11 +68,11 @@
         <div class="container bottom_border" style="height:390px;">
             <div class="row">
                 <div class=" col-sm-4 col-md col-sm-4  col-12 col" style="left:7%;">
-                    <h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
+                    <h5 class="headin5_amrc col_white_amrc pt2">Contact:</h5>
                     <!--headin5_amrc-->
                     <p class="mb10">
-                    <p><i class="fa fa-location-arrow"></i> ALkmaar</p>
-                    <p><i class="fa fa-phone"></i>  +31-6543210  </p>
+                    <p><i class="fa fa-location-arrow"></i> Alkmaar</p>
+                    <p><i class="fa fa-phone"></i>  +31 6 543210  </p>
                     <p><i class="fa fa fa-envelope"></i> JoCoHome@gmail.com  </p>
 
 
@@ -92,7 +96,7 @@
 
 
         <!--foote_bottom_ul_amrc ends here-->
-        <p class="text-center">Copyright &copy;2020 | Designed by <a href="#">Dollo</a></p>
+        <p class="text-center">Copyright &copy;2020 | Designed by <a href="https://github.com/venjelle/JoCoHome_Dollo_P3-P4">Dollo</a></p>
 
 
 
