Made css changes

--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Index.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Index.cshtml
@@ -2,8 +2,11 @@
         ViewData["Title"] = "Index";
 }
 
-<h2>Producten</h2>
+<h2>Welkom</h2>
 
-<p>Welkom op de product pagina!</p>
+<p>Op deze website kunt u de vakantiehuisjes van JoCoHome huren.</p>
 
-<img src="https://cdn.roompot.com/assets/imgs/vakantieparken/nederland/zeeland/roompot-beach-resort/beach-house/beach-house-6-pers/556942/accommodatie-header/640x290/70391.jpg" alt="Alternate Text" />
+<img src="https://cdn.roompot.com/assets/imgs/vakantieparken/nederland/zeeland/roompot-beach-resort/beach-house/beach-house-6-pers/556942/accommodatie-header/640x290/70391.jpg" alt="Alternate Text" style="height: 100%; width:100%;"/>
+
+<div style="">Dit zijn</div>
+<div>uw nieuws artikelen.</div>
