--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Privacy.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Privacy beleid";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Hier vind u alle informatie over hoe wij met uw gegevens om gaan.</p>
