--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Index.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Index.cshtml
@@ -15,6 +15,8 @@
         <input type="submit" value="Filter" />
     </p>
 </form>
+<div>Hier komt</div>
+<div>het nieuws.</div>
 <table class="table">
     <thead>
         <tr>
