--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Details.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Details.cshtml
@@ -4,81 +4,106 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+    <div class="container">
 
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Titel)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Titel)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Land)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Land)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Provincie)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Provincie)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Plaats)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Plaats)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Aantalpersonen)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Aantalpersonen)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Slaapkamers)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Slaapkamers)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Typehuisje)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Typehuisje)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Checkin)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Checkin)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Checkout)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Checkout)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Omschrijving)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Omschrijving)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+        <h1>Details</h1>
+        @if (TempData["Message"] != null)
+        {
+            <div id="helpdiv" class="alert alert-success" role="alert" style="
+
+  position: fixed;
+  top: 50%;
+  left:0px;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+
+
+">
+                @TempData["Message"]
+            </div>
+            <script type="text/javascript">
+                // close the div in 5 secs
+                window.setTimeout("closeHelpDiv();", 1600);
+
+                function closeHelpDiv() {
+                    document.getElementById("helpdiv").style.display = " none";
+                }
+            </script>
+        }
+        <div>
+            <h4>Product</h4>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Titel)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Titel)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Image)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Image)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Land)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Land)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Provincie)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Provincie)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Plaats)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Plaats)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Aantalpersonen)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Aantalpersonen)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Slaapkamers)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Slaapkamers)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Typehuisje)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Typehuisje)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Checkin)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Checkin)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Checkout)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Checkout)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Omschrijving)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Omschrijving)
+                </dd>
+            </dl>
+        </div>
+        <div>
+            <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
+            <a asp-action="Index">Back to List</a>
+        </div>
