--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
@@ -16,9 +16,9 @@
         footer
         {
             width: 20px;
-            background-color: red/*rgb(55, 75, 53)*/;
-            min-height: 10%/*490px*/;
-            top: 100%/*150%*/;
+            background-color: rgb(55, 75, 53);
+            min-height: 490px;
+            top: 150%;
             padding: 10px 0px 25px 0px;
         }
     </style>
