--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
@@ -15,9 +15,10 @@
 
         footer
         {
+            clear: both;
             width: 20px;
             background-color: rgb(55, 75, 53);
-            min-height: 490px;
+            height: 490px;
             top: 150%;
             padding: 10px 0px 25px 0px;
         }
@@ -65,16 +66,16 @@
         </main>
     </div>
 
-    <footer class="footer" style="color: white;">
-        <div class="container bottom_border" style="height:390px">@*390px*@
+    <footer class="footer" style="color: white; height:400px;">
+        <div class="container bottom_border" style="height:350px">@*390px*@
             <div class="row">
                 <div class=" col-sm-4 col-md col-sm-4  col-12 col" style="left:7%;">
                     <h5 class="headin5_amrc col_white_amrc pt2">Contact:</h5>
                     <!--headin5_amrc-->
                     <p class="mb10">
-                    <p><i class="fa fa-location-arrow"></i> Alkmaar</p>
-                    <p><i class="fa fa-phone"></i>  +31 6 543210  </p>
-                    <p><i class="fa fa fa-envelope"></i> JoCoHome@gmail.com  </p>
+                    <p><i class="fa fa-location-arrow" style="margin-top:5%;"></i> Alkmaar</p>
+                    <p><i class="fa fa-phone" style="margin-top:5%;"></i>  +31 6 543210  </p>
+                    <p><i class="fa fa fa-envelope" style="margin-top:5%;"></i> JoCoHome@gmail.com  </p>
 
 
                 </div>
@@ -91,7 +92,7 @@
         </div>
 
         <!--foote_bottom_ul_amrc ends here-->
-        <p class="text-center">Copyright &copy;2020 | Designed by <a href="https://github.com/venjelle/JoCoHome_Dollo_P3-P4">Dollo</a></p>
+        <p class="text-center" style="margin-top:-3%;">Copyright &copy;2020 | Designed by <a href="https://github.com/venjelle/JoCoHome_Dollo_P3-P4">Dollo</a></p>
 
     </footer>
 
