Removed opening tag

--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Index.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Products/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<<div class="customcontainer">
+<div class="customcontainer">
         
         <br />
         <h1>Vakantie huisjes</h1>
