Translated the Layout and Index view

--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
@@ -45,28 +45,25 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
+
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Products" asp-action="Index">Huisjes</a>
+                        </li>
+                        @*<li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy?</a>
+                        </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Contacts" asp-action="Create">Contact</a>
+                        </li>
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="Admin" asp-controller="home" asp-action="Index">Admin</a>
                             </li>
                         }
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Products" asp-action="Index">Producten</a>
-                        </li>
-                        @* Nieuws pagina komt hier *@
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Nieuws">Nieuws</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy?</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Contacts" asp-action="Create">Contact</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -82,7 +79,7 @@
         <div class="container bottom_border" style="height:300px">
             <div class="row">
                 <div class=" col-sm-4 col-md col-sm-4  col-12 col" style="width:33%;">
-                    <h5 class="headin5_amrc col_white_amrc pt2">Contact:</h5>
+                    <h5 class="headin5_amrc col_white_amrc pt2">Contact</h5>
                     <!--headin5_amrc-->
                     <p class="mb10">
                     <li>Plaats: Alkmaar</li>
@@ -117,7 +114,7 @@
         </div>
 
         <!--foote_bottom_ul_amrc ends here-->
-        <p class="text-center" style="margin-top:-3%;">Copyright &copy;2020 | Designed by <a href="https://github.com/venjelle/JoCoHome_Dollo_P3-P4">Dollo</a></p>
+        <p class="text-center" style="margin-top:-3%;">Copyright &copy;2020 | Ontworpen door <a href="https://github.com/venjelle/JoCoHome_Dollo_P3-P4">Dollo</a></p>
 
     </footer>
 
