--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
             <div class="container">
                 <img src="~/lib/bootstrap/jocohomelogo.png" height="50" width="50" style="border-radius:100px;" />
                 <br />
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">JoCoHome</a>
+                <a class="navbar-brand" style="color: white;" asp-area="" asp-controller="Home" asp-action="Index">JoCoHome</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,6 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
-
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -85,8 +84,6 @@
                     <li>Plaats: Alkmaar</li>
                     <li>Telefoon nummer: +31 6 543210</li>
                     <li>E-mail: JoCoHome@gmail.com</li>
-
-
                 </div>
 
                 <div class=" col-sm-4 col-md  col-6 col" style="width:33%;">
@@ -100,7 +97,6 @@
                 <div class=" col-sm-4 col-md  col-6 col" style="width:33%;">
                     <h5 class="headin5_amrc col_white_amrc pt2">Openingstijden</h5>
                     <ul>
-                        <li>Openingstijden</li>
                         <li>maandag 12:00–22:00</li>
                         <li>dinsdag 12:00–22:00</li>
                         <li>woensdag 12:00–22:00</li>
