--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_LoginPartial.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Shared/_LoginPartial.cshtml
@@ -6,21 +6,22 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+        <a  class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hallo @User.Identity.Name!</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-light">Logout</button>
+            <button  type="submit" class="nav-link btn btn-link text-light">Uitloggen</button>
         </form>
     </li>
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register">Registreren</a>
-    </li>
+    
     <li class="nav-item">
         <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Login">Inloggen</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register">Registreren</a>
     </li>
 }
 </ul>
