--- a/JoCoHome_Dollo/JoCoHome_Dollo/Views/Contacts/Create.cshtml
+++ b/JoCoHome_Dollo/JoCoHome_Dollo/Views/Contacts/Create.cshtml
@@ -4,51 +4,52 @@
     ViewData["Title"] = "Create";
 }
 
-    <h1>Contact</h1>
+<h1>Contact</h1>
+
 <hr />
 
-
 <div class="m-0 p-3 text-dark">
-    <h5>Contactgegevens:</h5>
+    <h5>Adresgegevens:</h5>
     <ul class="list-unstyled">
-        <hr />
+        @*<hr />*@
         <li>Kruseman van Elteweg 4</li>
         <li>1817 BC, Alkmaar</li>
         <li>Nederland</li>
     </ul>
 </div>
 
+<h4>Neem contact met ons op:</h4>
 
-
-<h4>Stuur uw email:</h4>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Naam" class="control-label"></label>
+                <label asp-for="Naam" class="control-label">Naam:</label>
                 <input asp-for="Naam" class="form-control" />
                 <span asp-validation-for="Naam" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Email" class="control-label">E-mailadres:</label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TelefoonNr" class="control-label"></label>
+                <label asp-for="TelefoonNr" class="control-label">Telefoonnummer:</label>
                 <input asp-for="TelefoonNr" class="form-control" />
                 <span asp-validation-for="TelefoonNr" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Onderwerp" class="control-label"></label>
+                <label asp-for="Onderwerp" class="control-label">Onderwerp:</label>
                 <input asp-for="Onderwerp" class="form-control" />
                 <span asp-validation-for="Onderwerp" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Bericht" class="control-label"></label>
-                <input asp-for="Bericht" class="form-control" />
+                <label asp-for="Bericht" class="control-label">Bericht:</label>
+                @*<input asp-for="Bericht" class="form-control"/>*@
+                <textarea class="form-control" rows="5"></textarea>
                 <span asp-validation-for="Bericht" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -58,9 +59,9 @@
     </div>
 </div>
 
-<div>
+@*<div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
